ThE cool page added

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,13 @@
   margin: 0px auto;
   padding: 20px 0px;
 }
-
 .jumbotron {
-  margin: 0px auto;
-  padding: 70px 30px;
-  background: #9575CD;
-  color: floralwhite;
+  background-color: #fff;
+}
+.some-dark {
+  -webkit-box-shadow: -2px 1px 13px 0px rgba(0,0,0,0.44);
+-moz-box-shadow: -2px 1px 13px 0px rgba(0,0,0,0.44);
+box-shadow: -2px 1px 13px 0px rgba(0,0,0,0.44);
 }
 
 address {
